--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,5 @@
-# Core libraries
+streamlit>=1.28.0
+transformers>=4.30.0
 torch>=2.0.0
-transformers>=4.35.0
-datasets>=2.14.0
-accelerate>=0.24.0
-
-# Evaluation
-evaluate>=0.4.0
-rouge-score>=0.1.2
-
-# Data processing
-pandas>=2.0.0
-numpy>=1.24.0
-nltk>=3.8.0
-
-# TextRank
-networkx>=3.0
-scikit-learn>=1.3.0
-
-# Training utilities
-tensorboard>=2.14.0
-tqdm>=4.65.0
-
-# Jupyter notebook
-jupyter>=1.0.0
-ipykernel>=6.25.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
+sentencepiece>=0.1.99
+protobuf>=3.20.0
